--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Welcome to Grandma's Lemon Meringue Pie</title>
+	<title>Recipe</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif">
 </head>
 <body>
 	<div class="container">
 		<div>
-			<img class="photo1" src="http://i4.xiachufang.com/image/600/4dfb6db27e5511e4865eb8ca3aeed2d7.jpg" alt="pizza">
-			<img class="photo2" src="http://s8.sinaimg.cn/mw690/0040yVMhgy6KHb4JCF9c7&amp;690" alt="pizza">
-			<img class="photo3" src="http://zp1.douguo.net/upload/dish/9/e/0/600_9e49881ec7d6e4bf3e3d535401f68130.jpg" alt="pizza">
-			<img class="photo4" src="http://i5.xiachufang.com/image/600/d2968eaea3cb11e38844b8ca3aeed2d7.jpg" alt="pizza">
+			<img class="photo1" src="./images/pie.png" alt="pie">
+			<img class="photo2" src="" alt="pancake">
+			<img class="photo3" src="./images/cupcake.png" alt="cupcake">
 			<p><strong>Safe . Easy . Delicious</strong></p>
 		</div>
-		<h1>Welcome to Grandma's Lemon Meringue Pie</h1>
+		<h1>Recipe</h1>
 		<a href="pie.html">
-			<button class="button"><span>Go and see the recipe! </span></button>
+			<button class="button"><span>Go and see the pie recipe!</span></button>
+		</a>
+		<a href="pancake.html">
+			<button class="button"><span>Go and see the pancake recipe!</span></button>
+		</a>
+		<a href="cupcake.html">
+			<button class="button"><span>Go and see the cupcake recipe!</span></button>
 		</a>
 	</div>
 </body>
