--- a/pie.html
+++ b/pie.html
@@ -4,17 +4,17 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Grandma's Lemon Meringue Pie</title>
+	<title>Pie</title>
 	<link rel="stylesheet" type="text/css" href="css/recipe.css">
 	<link rel="icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-
-	<h1>Grandma's Lemon Meringue Pie</h1>
-
+<div class="container">
+	<h1>Pie</h1>
 	<div>
-		<img src="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie.jpg" alt="pie">
-
+		<img class="photo1" src="./images/pie.png" alt="pie">
 		<p>
 			One 9-inch pie<br />
 			30 Min - Prep time<br />
@@ -22,12 +22,10 @@
 			40 Min - Total<br />
 			8 Servings
 		</p>
-
 		<hr />
 	</div>
 	<div>
 		<h2>INGREDIENTS</h2>
-
 		<ul>
 			<li>1 cup white sugar</li>
 			<li>2 tablespoons all-purpose flour</li>
@@ -41,13 +39,10 @@
 			<li>4 egg whites</li>
 			<li>6 tablespoons white sugar</li>
 		</ul>
-
 		<hr />
 	</div>
-
 	<div>
 		<h2>DERECTIONS</h2>
-
 		<ol>
 			<li><strong>Preheat Oven:</strong> Preheat oven 
 			to 350 degrees F (175 degrees C)</li>
@@ -85,35 +80,27 @@
 			minutes, or until meringue is golden br /own.</li>
 		</ol>
 	</div>
-
 	<div>
-		<h2>USER　COMMENTS</h2>
-
+		<h2>USER COMMENTS</h2>
 	  <blockquote>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.<br />
 	  <br />
 	  - Emilie S.</blockquote>
-
 	  <blockquote>Q: What do you call an ape who loves pie?<br />
 		A: A meringue-utan.<br />
 		<br />
 		- Vickie K.</blockquote>
 	</div>
-
 	<div>
 		<h2>LINKS</h2>
-
 		<p><a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe.">Search for other lemon meringue pie recipes</a></p>
-
 		<p><a href="index.html">Home</a></p>
-
 		<a class="picture" href="http://validator.w3.org/check/referer">
 			<img src="images/valid-html5.png" alt="valid-html5">
 		</a>
-		
 		<a class="picture" href="http://jigsaw.w3.org/css-validator/check/referer">
 			<img src="images/valid-css2.png" alt="valid-css2">
 		</a>
 	</div>
-
+</div>
 </body>
 </html>
