--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<title>Recipe</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div class="container">
 		<div>
 			<img class="photo1" src="./images/pie.png" alt="pie">
-			<img class="photo2" src="" alt="pancake">
+			<img class="photo2" src="./images/pacsni.webp" alt="pancake">
 			<img class="photo3" src="./images/cupcake.png" alt="cupcake">
 			<p><strong>Safe . Easy . Delicious</strong></p>
 		</div>
